# flugzeug

./: .gitignore  Cargo.toml  README.md  bochsrc.linux  flugzeug_os.vmdk  install_to_pendrive.sh  run.sh  run_bios.sh  run_bochs.sh  run_uefi.sh  run_vmware.bat  setup_net.sh  uefi_vars.fd
bios_bootloader/: Cargo.toml  build.rs
bios_bootloader/.cargo/: config.toml
bios_bootloader/src/: early.asm  enter_kernel.asm  lock.rs  main.rs  mm.rs  serial.rs
bootloader/: Cargo.toml  build.rs  i586-unknown-none.json
bootloader/.cargo/: config.toml
bootloader/src/: ap_entrypoint.asm  bios.asm  bios.rs  early.asm  enter_kernel.asm  low_level.asm  main.rs  mm.rs  panic.rs  reqs.rs  serial.rs
kernel/: Cargo.toml  build.rs  x86_64-unknown-none.json
kernel/.cargo/: config.toml
kernel/src/: :w  acpi.rs  apic.rs  core_locals.rs  font.rs  framebuffer.rs  hpet.rs  interrupts.asm  interrupts.rs  interrupts_misc.rs  lock.rs  main.rs  mm.rs  once.rs  panic.rs  pci.rs  print.rs  processors.rs  serial.rs  time.rs
kernel/src/pci/: mod.rs  pci_data.rs
kernel/src/vm/: mod.rs  vkernel.asm  vkernel.rs  vmcb.rs
kernel/src/vm/svm/: accessors.rs  mod.rs  npt.rs  utils.rs  vmcb.rs
kernel/src/vm/svm_vm/: accessors.rs  mod.rs  npt.rs  vmcb.rs
libs/acpi/: Cargo.toml
libs/asm/: Cargo.toml
libs/asmlink/: Cargo.toml
old_bootloader/: build.rs
pci_data_generator/: .gitignore  Cargo.toml
src/: bios.rs  build.rs  main.rs  serial.rs  uefi.rs
uefi_bootloader/: Cargo.toml  build.rs
uefi_bootloader/.cargo/: config.toml
uefi_bootloader/src/: acpi_locator.rs  ap_entrypoint.asm  ap_entrypoint.rs  binaries.rs  efi.rs  enter_kernel.asm  framebuffer.rs  framebuffer_resolutions.rs  kernel.rs  lock.rs  main.rs  mm.rs  panic.rs  print.rs  serial.rs
(+27 files in other folders)
