[package]
name = "kernel"
version = "0.1.0"
authors = ["addrianyy <adrianvpl@gmail.com>"]
edition = "2018"

[dependencies]
libc_routines = { path = "../libs/libc_routines" }
serial_port = { path = "../libs/serial_port" }
boot_block = { path = "../libs/boot_block" }
page_table = { path = "../libs/page_table" }
rangeset = { path = "../libs/rangeset" }
acpi = { path = "../libs/acpi" }
lock = { path = "../libs/lock" }
cpu = { path = "../libs/cpu" }
