[package]
name = "uefi_bootloader"
version = "0.1.0"
authors = ["addrianyy <adrianvpl@gmail.com>"]
edition = "2018"

[dependencies]
libc_routines = { path = "../libs/libc_routines" }
serial_port = { path = "../libs/serial_port" }
boot_block = { path = "../libs/boot_block" }
page_table = { path = "../libs/page_table" }
elfparse = { path = "../libs/elfparse" }
rangeset = { path = "../libs/rangeset" }
bootlib = { path = "../libs/bootlib" }
lock = { path = "../libs/lock" }
acpi = { path = "../libs/acpi" }
cpu = { path = "../libs/cpu" }

[build-dependencies]
asm = { path = "../libs/asm" }
